# shimaenaga

./: .gitignore  LICENSE  README.md  config.toml  mypy.ini  pyproject.toml  shimaenaga.py
.github/: dependabot.yml
css/: style.css
example/: config.toml
example/articles/2020/03/12/: hello-shimaenaga.md
example/articles/2020/03/13/: image-example.md
example/articles/2020/03/16/: code-highlight-example.md  long-text-example.md
example/articles/2020/03/20/: japanese-title.md
example/articles/2020/03/21/: hello-shimaenaga2.md
shimaenaga/: article.py  cli.py  config.py  contents.py  core.py  files.py  generators.py  initializer.py  initializers.py  page.py  paginator.py  parsers.py  project.py  renderers.py
shimaenaga/themes/simple/assets/css/: prism.css  style.css
shimaenaga/themes/simple/assets/js/: prism.js
shimaenaga/themes/simple/templates/: article.j2  base.j2  index.j2  page.j2  post.j2
templates/: base.j2  index.j2  page.j2  post.j2
tests/: test_config.py  test_contents.py  test_shimaenaga.py
