[tool.poetry]
name = "shimaenaga"
version = "0.1.0"
description = "Simple static site generator."
authors = ["kk6 <hiro.ashiya@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^2.11.2"
tomlkit = "^0.7.0"
mistune = {git = "https://github.com/lepture/mistune"}
typer = "^0.3.0"
loguru = "^0.5.1"
livereload = "^2.6.2"
html5lib-truncation = "^0.1.0"
pydantic = "^1.6"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
taskipy = "^1.6.0"
flake8 = "^3.8.3"
pytest = "^5.4.3"

[tool.poetry.scripts]
shimaenaga = "shimaenaga.cli:app"

[tool.taskipy.tasks]
build = "poetry run shimaenaga build"
test = "pytest tests"
lint = "flake8 shimaenaga/"
typecheck = "mypy shimaenaga/"
format-html = "prettier dest/* --write"
chirp = "task build && task format-html"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
