[tool.poetry]
name = "shimaenaga"
version = "0.1.0"
description = "Simple static site generator."
authors = ["kk6 <hiro.ashiya@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^2.11.3"
tomlkit = "^0.7.0"
mistune = {git = "https://github.com/lepture/mistune"}
typer = "^0.3.2"
loguru = "^0.5.3"
livereload = "^2.6.3"
html5lib-truncation = "^0.1.0"
pydantic = "^1.7"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
taskipy = "^1.6.0"
flake8 = "^3.8.4"
pytest = "^6.2.2"

[tool.poetry.scripts]
shimaenaga = "shimaenaga.cli:app"

[tool.taskipy.tasks]
build = "poetry run shimaenaga build"
test = "pytest tests"
lint = "flake8 shimaenaga/"
typecheck = "mypy shimaenaga/"
format-html = "prettier dest/* --write"
chirp = "task build && task format-html"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
